--- a/Movie_Recommendation_System.ipynb
+++ b/Movie_Recommendation_System.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
         },
         "id": "neyQxJbCmNPj",
-        "outputId": "12818160-4d3b-43c0-bee4-33376e2d2229"
+        "outputId": "e8d1e563-8d0c-47ce-b201-722fb4ed8d04"
       },
       "outputs": [
         {
@@ -70,7 +70,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af3f7c45-a4c8-4fcb-a87d-97602c935b5f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0447f955-6a6a-47cb-b6a2-5dda45b6acba\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -192,7 +192,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af3f7c45-a4c8-4fcb-a87d-97602c935b5f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0447f955-6a6a-47cb-b6a2-5dda45b6acba')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -244,12 +244,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-af3f7c45-a4c8-4fcb-a87d-97602c935b5f button.colab-df-convert');\n",
+              "        document.querySelector('#df-0447f955-6a6a-47cb-b6a2-5dda45b6acba button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-af3f7c45-a4c8-4fcb-a87d-97602c935b5f');\n",
+              "        const element = document.querySelector('#df-0447f955-6a6a-47cb-b6a2-5dda45b6acba');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -269,8 +269,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6bec3838-0cd6-49d9-a60b-3914f1012efe\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6bec3838-0cd6-49d9-a60b-3914f1012efe')\"\n",
+              "<div id=\"df-72494949-5c92-42cc-b12a-c934c34d2a22\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-72494949-5c92-42cc-b12a-c934c34d2a22')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -389,7 +389,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6bec3838-0cd6-49d9-a60b-3914f1012efe button');\n",
+              "        document.querySelector('#df-72494949-5c92-42cc-b12a-c934c34d2a22 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -400,7 +400,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 17
         }
       ],
       "source": [
@@ -409,17 +409,21 @@
         "pd.options.mode.chained_assignment = None  # default='warn'\n",
         "\n",
         "# Load Movies Metadata\n",
-        "imdb_data = pd.read_csv('/content/drive/MyDrive/tmdb /movies_metadata30.csv', low_memory=False)\n",
+        "# imdb_data = pd.read_csv('/content/drive/MyDrive/tmdb /movies_metadata30.csv', low_memory=False)\n",
+        "\n",
+        "url = 'https://raw.githubusercontent.com/lamateam2023/Movie-Recommender/main/movies_metadata30.csv'\n",
+        "imdb_data = pd.read_csv(url)\n",
         "\n",
         "# Print the first three rows\n",
-        "imdb_data.head(3)"
+        "imdb_data.head(3)\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Select the key columns to be used in recommender system\n",
+        "# Create a second CLEANER dataset containing needed columns only for recommender system\n",
         "metadata = imdb_data[['id','title','release_date','overview','vote_average','vote_count']]\n",
+        "# Display first 10 records of the clean dataset\n",
         "metadata.head(10)\n"
       ],
       "metadata": {
@@ -428,9 +432,9 @@
           "height": 363
         },
         "id": "V-pNsWugM-L4",
-        "outputId": "c6bd661b-3360-40cf-b9c6-a977ce23f3f1"
+        "outputId": "eafc6250-e35e-4df8-b949-854fd5eb75b7"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -462,7 +466,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2ac7dc51-2263-4e1a-ad71-2101964ffe95\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-04cd3a96-46dd-4fd2-8d43-f73b52d70b14\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -586,7 +590,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ac7dc51-2263-4e1a-ad71-2101964ffe95')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04cd3a96-46dd-4fd2-8d43-f73b52d70b14')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -638,12 +642,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2ac7dc51-2263-4e1a-ad71-2101964ffe95 button.colab-df-convert');\n",
+              "        document.querySelector('#df-04cd3a96-46dd-4fd2-8d43-f73b52d70b14 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2ac7dc51-2263-4e1a-ad71-2101964ffe95');\n",
+              "        const element = document.querySelector('#df-04cd3a96-46dd-4fd2-8d43-f73b52d70b14');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -663,8 +667,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ca49a37a-737a-43d7-a28b-89cc1bf7e997\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ca49a37a-737a-43d7-a28b-89cc1bf7e997')\"\n",
+              "<div id=\"df-04899718-023e-47a2-9442-6c0464f11d80\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-04899718-023e-47a2-9442-6c0464f11d80')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -783,7 +787,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ca49a37a-737a-43d7-a28b-89cc1bf7e997 button');\n",
+              "        document.querySelector('#df-04899718-023e-47a2-9442-6c0464f11d80 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -794,7 +798,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 18
         }
       ]
     },
@@ -1584,7 +1588,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "19ecDHHQnwngTRhcHO6Xf0J-uIn-eJQl_",
-      "authorship_tag": "ABX9TyOvdS06+g3RbW4+03eiQmw5",
+      "authorship_tag": "ABX9TyOvza1Z0qn8265IiagDzNaD",
       "include_colab_link": true
     },
     "kernelspec": {
