--- a/Movie_Recommendation_System.ipynb
+++ b/Movie_Recommendation_System.ipynb
@@ -408,7 +408,7 @@
         "import pandas as pd\n",
         "pd.options.mode.chained_assignment = None  # default='warn'\n",
         "\n",
-        "# Load Movies Metadata\n",
+        "# Load Movies dataset\n",
         "# imdb_data = pd.read_csv('/content/drive/MyDrive/tmdb /movies_metadata30.csv', low_memory=False)\n",
         "\n",
         "url = 'https://raw.githubusercontent.com/lamateam2023/Movie-Recommender/main/movies_metadata30.csv'\n",
@@ -417,6 +417,15 @@
         "# Print the first three rows\n",
         "imdb_data.head(3)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First step is to clean the dataset by removing unnecessary data elements to simplify manipulation and overhead. Here we chose an easier approach by creating a second dataset containing only necessary data elements to be used throughout this project."
+      ],
+      "metadata": {
+        "id": "G_8qvUW8ozqz"
+      }
     },
     {
       "cell_type": "code",
@@ -803,6 +812,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In the next few snippets we will add a new column 'score' which will have the IMDB weighted average based on the formula:\n",
+        "\n",
+        "(V ÷ (V+M)) × R + (M ÷ (V+M)) × C\n",
+        "\n",
+        "where the variables are:\n",
+        "\n",
+        "V is the number of votes for the movie;\n",
+        "\n",
+        "M is the minimum votes required to be listed in the chart;\n",
+        "\n",
+        "R is the average rating of the movie;\n",
+        "\n",
+        "C is the mean vote across the whole data."
+      ],
+      "metadata": {
+        "id": "Wxp_Y2IxwecE"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -822,10 +852,19 @@
         }
       ],
       "source": [
-        "# Calculate mean of vote average column\n",
+        "# First, we calculate mean of vote average column 'C'\n",
         "C = metadata['vote_average'].mean()\n",
         "print(C)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next we calculate 'M' the cutoff the 90th percentile. In other words, for a movie to be featured in the charts, it must have more votes than at least 90% of the movies on the list. As calculated below, only movies with 257 or more votes will be included in the movie recommendation. The value 0.90 can be adjusted as needed to get a better result."
+      ],
+      "metadata": {
+        "id": "1_2sv1Hbx1Ko"
+      }
     },
     {
       "cell_type": "code",
@@ -847,20 +886,20 @@
         }
       ],
       "source": [
-        "# Calculate the minimum number of votes required to be in the chart, m\n",
+        "# Calculate the minimum number of votes required to be in the chart 'M'\n",
         "m = metadata['vote_count'].quantile(0.90)\n",
         "print(m)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5EBz3bYXnGdN",
-        "outputId": "516ec2d5-7cc1-40b6-afb2-b9df9ec1ab6d"
+        "outputId": "e3ff820b-3a7f-445e-b188-0f5749ffbf6a"
       },
       "outputs": [
         {
@@ -871,25 +910,32 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 19
         }
       ],
       "source": [
         "# Filter out all qualified movies into a new DataFrame\n",
-        "q_movies = metadata.copy().loc[metadata['vote_count'] >= m]\n",
-        "q_movies.shape\n"
+        "qualified_movies = metadata.copy().loc[metadata['vote_count'] >= m]\n",
+        "qualified_movies.shape\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "p4mydlxHsSaF"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 676
         },
         "id": "fvTT2soqncEI",
-        "outputId": "df910094-3f05-4085-f728-09d429c1ecea"
+        "outputId": "0bdf13ca-d9b0-456d-94b1-a831d28fc55e"
       },
       "outputs": [
         {
@@ -920,7 +966,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d192a755-9936-4b72-b355-d4ac24f92e4a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bcb2f06b-7650-43bd-b73e-c470f3c17187\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1092,7 +1138,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d192a755-9936-4b72-b355-d4ac24f92e4a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bcb2f06b-7650-43bd-b73e-c470f3c17187')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1144,12 +1190,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d192a755-9936-4b72-b355-d4ac24f92e4a button.colab-df-convert');\n",
+              "        document.querySelector('#df-bcb2f06b-7650-43bd-b73e-c470f3c17187 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d192a755-9936-4b72-b355-d4ac24f92e4a');\n",
+              "        const element = document.querySelector('#df-bcb2f06b-7650-43bd-b73e-c470f3c17187');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1169,8 +1215,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0910f051-f86c-4144-ba9e-19b102c67ca4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0910f051-f86c-4144-ba9e-19b102c67ca4')\"\n",
+              "<div id=\"df-1b3bb146-7e1c-4880-bea4-4f773d51781c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1b3bb146-7e1c-4880-bea4-4f773d51781c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1289,7 +1335,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0910f051-f86c-4144-ba9e-19b102c67ca4 button');\n",
+              "        document.querySelector('#df-1b3bb146-7e1c-4880-bea4-4f773d51781c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1300,25 +1346,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         }
       ],
       "source": [
         "# Function that computes the weighted rating of each movie\n",
+        "# Based on the IMDB formula described ubove\n",
         "def weighted_rating(x, m=m, C=C):\n",
         "    v = x['vote_count']\n",
         "    R = x['vote_average']\n",
         "    # Calculation based on the IMDB formula\n",
         "    return (v/(v+m) * R) + (m/(m+v) * C)\n",
         "\n",
-        "# Define a new feature 'score' and calculate its value with `weighted_rating()`\n",
-        "q_movies['score'] = q_movies.apply(weighted_rating, axis=1)\n",
+        "# Add new column 'score' with values calculated by `weighted_rating()`\n",
+        "qualified_movies['score'] = qualified_movies.apply(weighted_rating, axis=1)\n",
         "\n",
-        "#Sort movies based on score calculated above\n",
-        "q_movies = q_movies.sort_values('score', ascending=False)\n",
+        "# Use the new column 'score' to sort movies\n",
+        "qualified_movies = qualified_movies.sort_values('score', ascending=False)\n",
         "\n",
-        "#Print the top 15 movies\n",
-        "q_movies[['title', 'vote_count', 'vote_average', 'score']].head(20)\n",
+        "#Print the top 15 QUALIFIED movies\n",
+        "qualified_movies[['title', 'vote_count', 'vote_average', 'score']].head(20)\n",
         "\n"
       ]
     },
@@ -1357,7 +1404,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Next we build the TF-IDF matrix (Term Frequency - Inverse Document Frequency) which is an algorithm that uses the frequency of words to determine how relevant those words are to a given title."
+        "Next we use TF-IDF vectorizer class from scikit-learn library (Term Frequency - Inverse Document Frequency) which is an algorithm that uses the frequency of words to determine how relevant those words are to a given title to create a TF-IDF matrix 'tfidf_matrix'"
       ],
       "metadata": {
         "id": "9IMNNifY5luI"
@@ -1365,13 +1412,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ettj55RdpjPh",
-        "outputId": "b975ae46-1d82-4238-a533-1ba50debc48c"
+        "outputId": "ba01d069-340f-449d-b1b2-9b03d1cfb8f7"
       },
       "outputs": [
         {
@@ -1382,14 +1429,15 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 22
         }
       ],
       "source": [
         "#Import TfIdfVectorizer from scikit-learn\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
-        "#Define a TF-IDF Vectorizer Object. Remove all english stop words such as 'the', 'a'\n",
+        "#Define a TF-IDF Vectorizer Object.\n",
+        "#Remove all english stop words such as 'the', 'an', etc\n",
         "tfidf = TfidfVectorizer(stop_words='english')\n",
         "\n",
         "#Replace NaN with an empty string\n",
@@ -1398,40 +1446,14 @@
         "#Construct the required TF-IDF matrix by fitting and transforming the data\n",
         "tfidf_matrix = tfidf.fit_transform(metadata['overview'])\n",
         "\n",
-        "#Output the shape of tfidf_matrix\n",
+        "#Output the shape of tfidf_matrix, showing 30k rows as original dataset\n",
         "tfidf_matrix.shape\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "O2CZrkyopsYo",
-        "outputId": "1e4bacc2-9f0f-4e49-fd3f-82d86119938d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['beartooth' 'beary' 'beasley' 'beast' 'beastie' 'beasties' 'beastly'\n",
-            " 'beastmen' 'beasts' 'beat']\n"
-          ]
-        }
-      ],
-      "source": [
-        "#Array mapping from feature integer indices to feature name.\n",
-        "print(tfidf.get_feature_names_out()[5000:5010])\n",
-        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "In the next steps, will use similarity score on the TFIDF matrix created earlier to calculate a numeric quantity which will help identify similarity between two movies\n"
+        "In the next steps, will create a similarity score matrix (30K X 30K) using TFIDF matrix created earlier to identify similarities between any two movies. As a result, each movie will have column of similarity scores against othe titles in the dataset."
       ],
       "metadata": {
         "id": "ZcBz86Te3HHn"
@@ -1464,10 +1486,19 @@
         "from sklearn.metrics.pairwise import linear_kernel\n",
         "\n",
         "# Compute the cosine similarity matrix\n",
-        "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
+        "sim_matrix = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
         "\n",
-        "cosine_sim.shape\n"
+        "sim_matrix.shape\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Before creating the main recommendation function, we need to build a list of movie titles and movie Ids to easily find movie id to use when referencing original dataset 'metadata'"
+      ],
+      "metadata": {
+        "id": "9655-Nwrm4eH"
+      }
     },
     {
       "cell_type": "code",
@@ -1512,7 +1543,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finally, the function next utilizes the similarity matrix to find top 10 similar movies."
+        "Finally, the main function which will return 10 recommendations based on title submitted utilizing the similarity matrix."
       ],
       "metadata": {
         "id": "AqDcwT064uE5"
@@ -1527,12 +1558,12 @@
       "outputs": [],
       "source": [
         "# Function that takes in movie title as input and outputs most similar movies\n",
-        "def get_recommendations(title, cosine_sim=cosine_sim):\n",
+        "def get_recommendations(title, sim_matrix=sim_matrix):\n",
         "    # Get the index of the movie that matches the title\n",
         "    idx = indices[title]\n",
         "\n",
         "    # Get the pairwsie similarity scores of all movies with that movie\n",
-        "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
+        "    sim_scores = list(enumerate(sim_matrix[idx]))\n",
         "\n",
         "    # Sort the movies based on the similarity scores\n",
         "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
@@ -1548,8 +1579,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The main function of the recommendation project. Basically enter a movie name to get best 10 recommendation movies based on similarity.."
+      ],
+      "metadata": {
+        "id": "aQQAsd7IoR_M"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#Testing main function by calling it with movie name\n",
         "get_recommendations('The Dark Knight Rises')"
       ],
       "metadata": {
@@ -1588,7 +1629,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "19ecDHHQnwngTRhcHO6Xf0J-uIn-eJQl_",
-      "authorship_tag": "ABX9TyOvza1Z0qn8265IiagDzNaD",
+      "authorship_tag": "ABX9TyPdSAocG2cGp/Pj/EQ//FGK",
       "include_colab_link": true
     },
     "kernelspec": {
